# consulcpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  sonar-project.properties
.circleci/: config.yml
cmake/: CodeCoverage.cmake  Common.cmake  Tools.cmake
examples/common/: helpers.h
examples/leader/: CMakeLists.txt  health.proto  leader.proto  main.cpp
include/consulcpp/: Catalog.h  Consul.h  ConsulCpp  Export.h  KV.h  Leader.h  Service.h  Services.h  Sessions.h  Utils.h  spimpl.h
src/: CMakeLists.txt  Catalog.cpp  Consul.cpp  KV.cpp  Leader.cpp  Service.cpp  Services.cpp  Sessions.cpp  Utils.cpp  consulcppConfig.cmake
src/internal/: HttpClient.h  Uri.h  expected.hpp
tests/: CMakeLists.txt  kv-test.cpp  leader-test.cpp  services-test.cpp
vcpkg/consulcpp/: CONTROL  portfile.cmake
